--- a/home.css
+++ b/home.css
@@ -11,6 +11,13 @@ img{
 p, h2{
     margin: 0;
 }
+.container{
+    width: 80%;
+    margin-top: 20px;
+}
+.container .topbar button, .container .topbar img{
+    background-color: rgb(243, 237, 237);;
+}
 
 /* top bar */
 .topbar{
@@ -26,6 +33,10 @@ p, h2{
     float: left;
     height: 100%;
 }
+.left a{
+    color: black;
+    text-decoration: none;
+}
 .text-logo{
     float: right;
     height: 100%;
@@ -33,6 +44,7 @@ p, h2{
 }
 .text-logo p{
     align-self: flex-end;
+    margin-bottom: 0;
 }
 
 .right{
