--- a/home.css
+++ b/home.css
@@ -169,6 +169,9 @@ p, h2{
 .resume img{
     height: 30px;
 }
+.resume li:first-child{
+    display: none;
+}
 .add-resume{
     display: flex;
     height: 300px;
